# CardGame

./: CMakeLists.txt  Makefile  README.md  main.cpp  prohlaseni.txt  zadani.txt
Headers/: Card.h  CardDecks.h  Combat_card.h  Game.h  Hero_buff_card.h  Menu.h  Player.h  Spell_card.h
Sources/: Card.cpp  CardDecks.cpp  Combat_card.cpp  Game.cpp  Hero_buff_card.cpp  Menu.cpp  Player.cpp  Spell_card.cpp
doc/: README.md
src/: main.cpp
src/Headers/: Card.h  CardDecks.h  Combat_card.h  Game.h  Hero_buff_card.h  Menu.h  Player.h  Spell_card.h
src/Sources/: Card.cpp  CardDecks.cpp  Combat_card.cpp  Game.cpp  Hero_buff_card.cpp  Menu.cpp  Player.cpp  Spell_card.cpp
src/cards/: allCards  allDecks
